# docs-scraper

./: .gitignore  README.md  docs.json  docs_crawler.py  pyproject.toml  requirements.txt
.cursor/rules/: uv.mdc
_ai/: implementation-plan.md
src/docs_crawler/: __init__.py  base.py  batch_runner.py  cli.py  config.py  deepcrawl_runner.py  extraction.py  persistence.py  utils.py  youtube.py
test/: docs.json  run_test.py  test_docs_crawler.py
tests/: __init__.py  docs.json  test_docs_crawler.py  test_persistence.py  test_runners.py  test_youtube.py
