[project]
name = "docs-crawler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "deliriusz", email = "deliriusz.eth@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "typing-extensions>=4.0.0",
]

[project.scripts]
docs-crawler = "docs_crawler:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/docs_crawler"]